package modelo;

import modelo.jugadores.Jugador;

public interface Interactuable {
    public abstract void interactuar(Jugador jugador);

}
