package modelo.premios;

import modelo.jugadores.Jugador;

public class SinPremio implements Premio {

    @Override
    public void interactuar(Jugador jugador) {

    }
}
